# DiscordDetector-rs

./: .gitignore  Cargo.toml  README.md
src/: config.rs  gateway.rs  main.rs  message.rs
