[package]
name = "dd-detector"
version = "0.1.0"
edition = "2021"
authors = ["EKQRCalamity"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
websocket = "0.26.5"
tungstenite = {version = "0.19.0", features = ["native-tls"]}
url = "2.2.2"
parking_lot = "*"
regex = "*"
rand = "*"
chrono = "*"